feat: add logging inteceptor and comression/generation functinality
